# clic-rs

./: CLAUDE.md  Cargo.toml  LICENSE.txt  Makefile  README.md  TRANSLATED_CLIc.md  build.rs
clic-rs/: Cargo.toml
clic-rs/kernels/: affine_transform_deskew_x.cl  affine_transform_deskew_y.cl  binary_edge_detection.cl  binary_erosion.cl  count_touching_neighbors.cl  detect_maxima.cl  dilate_box.cl  dilate_box_slice_by_slice.cl  dilate_sphere.cl  erode_box_slice_by_slice.cl  erode_sphere.cl  erode_sphere_slice_by_slice.cl  exclude_on_edges.cl  generate_binary_overlap_matrix.cl  image_operation.cl  (+33 more)
kernels/: add_images_weighted.cl  circular_shift.cl  clahe.cl  convolve.cl  depth_projection.cl  detect_minima.cl  dilate_sphere_slice_by_slice.cl  dilation.cl  erode_box.cl  erosion.cl  fft.cl  gaussian_blur_separable.cl  gaussian_derivative_separable.cl  gradient.cl  local_cross_correlation.cl  maximum_octagon_box.cl  maximum_sphere.cl  mean_projection.cl  mean_separable.cl  mean_touching_neighbors.cl  median_sphere.cl  minimum_separable.cl  minimum_sphere.cl  mode_box.cl  mode_sphere.cl  mode_touching_neighbors.cl  multiply_matrix.cl  preamble.cl  read_map_values.cl  replace_value.cl  set_image_borders.cl  set_nonzero_pixels_to_pixelindex.cl  set_slice.cl  set_where_x_compare_y.cl  standard_deviation_touching_neighbors.cl  std_z_projection.cl  sum_projection.cl  sum_reduction_x.cl  unary_operation.cl  variance_sphere.cl
src/: array.rs  backend.rs  backend_manager.rs  device.rs  error.rs  execution.rs  types.rs  utils.rs
tests/: integration_tier2.rs  integration_tier5_7.rs
(+24 files in other folders)
